[gd_scene load_steps=6 format=3 uid="uid://dm1jpn72n0ue7"]

[ext_resource type="Script" uid="uid://bs0ss0m4xt5ut" path="res://scenes/GUI/main_game/top_bar/gui_gold.gd" id="1_tw8gy"]
[ext_resource type="Texture2D" uid="uid://cnnxje814bs2" path="res://resources/sprites/GUI/icons/resources/icon_gold.png" id="2_tw8gy"]
[ext_resource type="AudioStream" uid="uid://de7fd7oigrigc" path="res://resources/sounds/SFX/gold/gold_gain.wav" id="3_1552w"]
[ext_resource type="AudioStream" uid="uid://cnjsxqrjyqthb" path="res://resources/sounds/SFX/gold/gold_increased.wav" id="3_d0qkp"]
[ext_resource type="AudioStream" uid="uid://c1e0ywk11f7c7" path="res://resources/sounds/SFX/gold/gold_use.wav" id="4_1552w"]

[node name="GUIGold" type="HBoxContainer"]
offset_right = 19.0
offset_bottom = 12.0
theme_override_constants/separation = 1
script = ExtResource("1_tw8gy")

[node name="TextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_tw8gy")

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"HUD"
theme_override_colors/font_color = Color(1, 0.921569, 0.341176, 1)
text = "xx"
vertical_alignment = 1

[node name="GoldIncreasedSoundFull" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_1552w")
bus = &"SFX"

[node name="GoldIncreasedSoundSingle" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_d0qkp")
bus = &"SFX"

[node name="GoldUseSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_1552w")
volume_db = 5.0
bus = &"SFX"
